{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 177,
  "lineage": "90cd6245-f5ad-5e2d-879b-ea69b63dc290",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f34c20258ac1d7c",
            "domain": "vpc",
            "id": "eipalloc-09f34c20258ac1d7c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-230-138-76.compute-1.amazonaws.com",
            "public_ip": "3.230.138.76",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Ash-EIP"
            },
            "tags_all": {
              "Name": "Ash-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619680930396:internet-gateway/igw-04b693b0dccead610",
            "id": "igw-04b693b0dccead610",
            "owner_id": "619680930396",
            "tags": {
              "Name": "Ash-IGW"
            },
            "tags_all": {
              "Name": "Ash-IGW"
            },
            "vpc_id": "vpc-09886bba365588146"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f34c20258ac1d7c",
            "connectivity_type": "public",
            "id": "nat-06be314da45fade25",
            "network_interface_id": "eni-0611257f1eed13404",
            "private_ip": "10.0.3.254",
            "public_ip": "3.230.138.76",
            "subnet_id": "subnet-08494bb44ff4fb169",
            "tags": {
              "Name": "Ash-NAT"
            },
            "tags_all": {
              "Name": "Ash-NAT"
            }
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04b693b0dccead610",
            "id": "r-rtb-089342a92f2db42c91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-089342a92f2db42c9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619680930396:route-table/rtb-0c3af28f69087c26c",
            "id": "rtb-0c3af28f69087c26c",
            "owner_id": "619680930396",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06be314da45fade25",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Ash-rt-private"
            },
            "tags_all": {
              "Name": "Ash-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-09886bba365588146"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020778081e8407e29",
            "route_table_id": "rtb-089342a92f2db42c9",
            "subnet_id": "subnet-08494bb44ff4fb169"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619680930396:subnet/subnet-02b11299bf53c4ab4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b11299bf53c4ab4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619680930396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ash-net-private1"
            },
            "tags_all": {
              "Name": "Ash-net-private1"
            },
            "vpc_id": "vpc-09886bba365588146"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619680930396:subnet/subnet-06fef878eeb8adcd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fef878eeb8adcd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619680930396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ash-net-private2"
            },
            "tags_all": {
              "Name": "Ash-net-private2"
            },
            "vpc_id": "vpc-09886bba365588146"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619680930396:subnet/subnet-08494bb44ff4fb169",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08494bb44ff4fb169",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619680930396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ash-net-public"
            },
            "tags_all": {
              "Name": "Ash-net-public"
            },
            "vpc_id": "vpc-09886bba365588146"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619680930396:vpc/vpc-09886bba365588146",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e146849c131e09d9",
            "default_route_table_id": "rtb-089342a92f2db42c9",
            "default_security_group_id": "sg-0153e1c41c7f73842",
            "dhcp_options_id": "dopt-d2cf9baa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09886bba365588146",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-089342a92f2db42c9",
            "owner_id": "619680930396",
            "tags": {
              "Name": "Ash-VPC"
            },
            "tags_all": {
              "Name": "Ash-VPC"
            }
          }
        }
      ]
    }
  ]
}